--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     </div>
     <script src="turtle.js"></script>
+    <script src="reader.js"></script>
     <script src="webgl-utils.js"></script>
     <script src="webgl-debug.js"></script>
     <script src="cuon-utils.js"></script>
@@ -23,7 +24,6 @@
     <script src="scene.js"></script>
 
     <script>
-
       document.addEventListener("keypress", function(event){
           if(event.keyCode === 114 ){
               rotate = true;
