--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="cuon-matrix.js"></script>
     <script src="vector.js"></script>
     <script src="scene.js"></script>
+    <script src="input.js"></script>
 
     <script>
       document.addEventListener("keypress", function(event){
